Revert "US-1229 Fix do not override built history (#114)"
This reverts commit bf0343e578f389b4379af06f6831bcbec67d9a69.