@@ -17,7 +17,6 @@ import com.powsybl.iidm.network.SwitchKind;
 import com.powsybl.iidm.network.VariantManagerConstants;
 import com.powsybl.network.store.client.NetworkStoreService;
 import com.powsybl.sld.iidm.extensions.BranchStatus;
-
 import org.gridsuite.modification.server.dto.*;
 import org.gridsuite.modification.server.elasticsearch.EquipmentInfosService;
 import org.gridsuite.modification.server.entities.ModificationEntity;
@@ -167,7 +166,8 @@ public class BuildTest {
         String uriString = "/v1/networks/{networkUuid}/build?receiver=me";
         BuildInfos buildInfos = new BuildInfos(VariantManagerConstants.INITIAL_VARIANT_ID,
             NetworkCreation.VARIANT_ID,
-            List.of(new GroupAndReportInfos(TEST_GROUP_ID, TEST_REPORT_ID), new GroupAndReportInfos(TEST_GROUP_ID_2, TEST_REPORT_ID_2)),
+            List.of(TEST_GROUP_ID, TEST_GROUP_ID_2),
+            List.of(TEST_REPORT_ID, TEST_REPORT_ID_2),
             new HashSet<>());
         webTestClient.post().uri(uriString, TEST_NETWORK_ID)
             .bodyValue(buildInfos)
@@ -180,6 +180,7 @@ public class BuildTest {
 
         BuildInfos newBuildInfos = new BuildInfos(NetworkCreation.VARIANT_ID,
             VARIANT_ID_2,
+            List.of(),
             List.of(),
             new HashSet<>());
         webTestClient.post().uri(uriString, TEST_NETWORK_ID)
@@ -237,7 +238,8 @@ public class BuildTest {
         String uriString = "/v1/networks/{networkUuid}/build?receiver=me";
         BuildInfos buildInfos = new BuildInfos(VariantManagerConstants.INITIAL_VARIANT_ID,
             NetworkCreation.VARIANT_ID,
-            List.of(new GroupAndReportInfos(TEST_GROUP_ID, TEST_REPORT_ID), new GroupAndReportInfos(TEST_GROUP_ID_2, TEST_REPORT_ID_2)),
+            List.of(TEST_GROUP_ID, TEST_GROUP_ID_2),
+            List.of(TEST_REPORT_ID, TEST_REPORT_ID_2),
             new HashSet<>());
         webTestClient.post().uri(uriString, TEST_NETWORK_ID)
             .bodyValue(buildInfos)
@@ -308,7 +310,8 @@ public class BuildTest {
         // to check
         BuildInfos newBuildInfos = new BuildInfos(NetworkCreation.VARIANT_ID,
             VARIANT_ID_2,
-            List.of(),
+            Collections.emptyList(),
+            Collections.emptyList(),
             new HashSet<>());
         webTestClient.post().uri(uriString, TEST_NETWORK_ID)
             .bodyValue(newBuildInfos)
@@ -406,7 +409,8 @@ public class BuildTest {
         String uriString = "/v1/networks/{networkUuid}/build?receiver=me";
         BuildInfos buildInfos = new BuildInfos(VariantManagerConstants.INITIAL_VARIANT_ID,
             NetworkCreation.VARIANT_ID,
-            List.of(new GroupAndReportInfos(TEST_GROUP_ID, TEST_REPORT_ID)),
+            List.of(TEST_GROUP_ID),
+            List.of(TEST_REPORT_ID),
             new HashSet<>());
         webTestClient.post().uri(uriString, TEST_NETWORK_STOP_BUILD_ID)
             .bodyValue(buildInfos)
@@ -437,7 +441,8 @@ public class BuildTest {
         String uriString = "/v1/networks/{networkUuid}/build?receiver=me";
         BuildInfos buildInfos = new BuildInfos(VariantManagerConstants.INITIAL_VARIANT_ID,
             NetworkCreation.VARIANT_ID,
-            List.of(new GroupAndReportInfos(TEST_GROUP_ID, TEST_REPORT_ID)),
+            List.of(TEST_GROUP_ID),
+            List.of(TEST_REPORT_ID),
             new HashSet<>());
         webTestClient.post().uri(uriString, TEST_NETWORK_ID)
             .bodyValue(buildInfos)
